--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
   },
   "homepage": "https://github.com/mrakotomanana/blog#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^5.2.0",
+    "mongoose": "^7.0.3",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "pino-http": "^8.3.3",
+    "pug": "^3.0.2"
   }
 }
