--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "php js html css java",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "set NODE_ENV=development&& node server.js",
+    "prod": "set NODE_ENV=production&& node server.js"
   },
   "repository": {
     "type": "git",
@@ -24,12 +25,15 @@
   },
   "homepage": "https://github.com/mrakotomanana/blog#readme",
   "dependencies": {
+    "@angular/cli": "^6.0.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "pino-http": "^8.3.3",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "sqlite3": "^5.1.6"
   }
 }
